<?xml version="1.0"?>
<package>
  <name>math_std</name>
  <version>0.0.0</version>
  <description>The math_std package</description>
  <maintainer email="philkark@cs.uni-bonn.de">Philipp Karkowski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
