<?xml version="1.0"?>
<package format="2">
  <name>rviz_ros_communication_plugin</name>
  <version>0.0.0</version>
  <description>The rviz_ros_communication_plugin package</description>
  <maintainer email="philkark@cs.uni-bonn.de">Philipp Karkowski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>qtbase5</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <rviz plugin="${prefix}/reemc_rviz_plugin.xml"/>
  </export>
</package>
