<?xml version="1.0"?>
<package>
  <name>tools_std</name>
  <version>0.0.0</version>
  <description>The tools_std package</description>
  <maintainer email="philkark@cs.uni-bonn.de">Philipp Karkowski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>math_std</build_depend>
  <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
      <build_depend>visualization_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>math_std</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
      <run_depend>visualization_msgs</run_depend>
  
</package>
